--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="lbl_choose_from_gallery">Pick From Galery</string>
     <string name="toast_image_intent_null">Not Found</string>
     <string name="dialog_permission_title">Give Access</string>
-    <string name="dialog_permission_message">This app requires permission to use this feature. You can provide them in the application settings.</string>
-    <string name="go_to_settings">To Settigs</string>
+    <string name="dialog_permission_message">Aplikasi ini memerlukan izin untuk menggunakan fitur ini. Anda dapat menyediakannya di pengaturan aplikasi.</string>
+    <string name="go_to_settings">Ke Pengaturan</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
