fixing bug upload photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,15 +17,42 @@
     <string name="login">Login</string>
 
 
-    <string name="lbl_set_profile_photo">Set Photo</string>
-    <string name="lbl_take_camera_picture">Take Image</string>
-    <string name="lbl_choose_from_gallery">Pick From Galery</string>
-    <string name="toast_image_intent_null">Not Found</string>
-    <string name="dialog_permission_title">Give Access</string>
-    <string name="dialog_permission_message">This app requires permission to use this feature. You can provide it in app settings.</string>
-    <string name="go_to_settings">To Settings</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+<!--    <string name="lbl_set_profile_photo">Set Photo</string>-->
+<!--    <string name="lbl_take_camera_picture">Take Image</string>-->
+<!--    <string name="lbl_choose_from_gallery">Pick From Galery</string>-->
+<!--    <string name="toast_image_intent_null">Not Found</string>-->
+<!--    <string name="dialog_permission_title">Give Access</string>-->
+<!--    <string name="dialog_permission_message">This app requires permission to use this feature. You can provide it in app settings.</string>-->
+<!--    <string name="go_to_settings">To Settings</string>-->
+<!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
+<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
+
+    <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>
+
+    <string name="title_choose_image_provider">Choose</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="title_gallery">Gallery</string>
+    <string name="title_camera">Camera</string>
+
+    <string name="permission_camera_denied">
+        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>
+
+    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
+    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
+    <string name="error_failed_to_crop_image">Failed to crop image</string>
+    <string name="error_failed_to_compress_image">Failed to compress image</string>
+    <string name="error_task_cancelled">Task Cancelled</string>
+    <string name="error_camera_app_not_found">Camera app not found</string>
+
+    <!-- uCrop string resource start -->
+    <string name="ucrop_label_original">Original</string>
+    <string name="ucrop_label_edit_photo">Edit Photo</string>
+    <string name="ucrop_menu_crop">Crop</string>
+    <string name="ucrop_rotate">Rotate</string>
+    <string name="ucrop_scale">Scale</string>
+    <string name="ucrop_crop">Crop</string>
+    <!-- uCrop string resource end -->
+
 
 
 </resources>
